# snake_gmae

./: CMakeLists.txt  README.md
src/: app.c  app.h  config.h  game_context.h  main.c  renderer.c  renderer.h
src/snake/: snake.c  snake.h
src/utils/: util_random.c  util_random.h
